t1-docker/openshift/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-svc
spec:
  selector:
    name: node-app-containers
  ports:
    - nodePort: 0
      port: 80
      protocol: TCP
      targetPort: 8080
