t1-docker/openshift/node-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: node-app-route
spec:
  to:
    kind: Service
    name: node-app-svc
